<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Bartlomiej Uliasz

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <!-- The name of the application. -->
    <string name="app_name">USG client</string>

    <!-- Tip text displayed at the bottom of the splash screen. -->
    <string name="tap_for_options">Tap for options</string>

    <!-- Text displayed on the result summary card when the transfer was stopped. -->
    <string name="great_job">Transfer stopped</string>

    <!-- Format string used to display the final score on the result summary card. -->
    <string name="time_summary">Time: %1$ds</string>

    <!-- Menu item text to start a new USG session. -->
    <string name="new_session">New session</string>

    <!-- Menu item text for options menu. -->
    <string name="options">Options</string>

    <!-- Menu item text to display the application instructions. -->
    <string name="instructions">Instructions</string>

    <!-- Session menu. -->
    <string name="freeze">Freeze</string>
    <string name="gain">Gain</string>
    <string name="gain_up">Gain up</string>
    <string name="gain_down">Gain down</string>
    <string name="area">Area</string>
    <string name="area_up">Area up</string>
    <string name="area_down">Area down</string>
    <string name="save_picture">Save picture</string>
    <string name="close_session">Close session</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="tx_signal">TX Signal</string>
    <string name="palette">Palette</string>
    <string name="tgc">TGC</string>
    <string name="_8_bit_linear_grayscale">8-bit linear grayscale</string>
    <string name="_8_bit_log_1_5f_grayscale">8-bit log 1.5f grayscale</string>
    <string name="_8_bit_log_1_75f_grayscale">8-bit log 1.75f grayscale</string>
    <string name="_8_bit_log_2_0f_grayscale">8-bit log 2.0f grayscale</string>
    <string name="_8_bit_log_3_0f_grayscale">8-bit log 3.0f grayscale</string>
    <string name="sine_1_cycle_25_mhz">Sine 1 cycle, 25 MHz</string>
    <string name="sine_4_cycles_25_mhz">Sine 4 cycles, 25 MHz</string>
    <string name="sine_6_cycles_25_mhz">Sine 6 cycles, 25 MHz</string>
    <string name="sine_16_cycles_25_mhz">Sine 16 cycles, 25 MHz</string>
    <string name="_13_bit_barker_20_mhz">13-bit Barker, 20 MHz</string>
    <string name="_13_bit_barker_35_mhz">13-bit Barker, 35 MHz</string>
    <string name="_16_bit_chirp_15_25_mhz">16-bit Chirp, 15-25 MHz</string>

    <!-- The tutorial instructions. -->
    <string-array name="tutorial_phrases">
        <item>Tap to start connection</item>
        <item>When connected:</item>
        <item>Swipe forward to increase gain</item>
        <item>Swipe backward to decrease gain</item>
        <item>Tap to freeze</item>
        <item>Tap again to un-freze</item>
    </string-array>
</resources>
